--- a/ansible/roles/incus/tasks/main.yml
+++ b/ansible/roles/incus/tasks/main.yml
@@ -7,7 +7,7 @@
     update_cache: yes
   become: yes
 
-- name: "Install rsync for cluster"
+- name: "Install rsync for clustering"
   apt:
     name: rsync
     state: latest
@@ -95,7 +95,6 @@
 
 - name: Add remote
   shell: incus remote add {{ remote }} {{ server_1 }} --accept-certificate
-  become: yes
   run_once: true
   connection: local
   delegate_to: localhost
