--- a/ansible/roles/incus/tasks/main.yml
+++ b/ansible/roles/incus/tasks/main.yml
@@ -51,6 +51,7 @@
   - name: "Generate node token"
     shell: "incus cluster --force-local --quiet add {{ inventory_hostname }}"
     register: token
+    delegate_to: server_1
     when: inventory_hostname != server_1
 
   - block:
