--- a/ansible/roles/gameserver/tasks/main.yml
+++ b/ansible/roles/gameserver/tasks/main.yml
@@ -1,35 +1,72 @@
-- name: "Configure faust-gameserver"
-  hosts: gameserver_image
-  tasks:
-    - name: Install Fauscteam Gameserver
-      include_role:
-        name: "{{ faus_role }}"
-      loop:
-        - fausecteam.ctf_gameserver_ansible.db_prolog
-        - fausecteam.ctf_gameserver_ansible.web
-        - fausecteam.ctf_gameserver_ansible.db_epilog
-        - fausecteam.ctf_gameserver_ansible.controller
-        - fausecteam.ctf_gameserver_ansible.submission
-        - fausecteam.ctf_gameserver_ansible.vpnstatus
-      loop_control:
-        loop_var: "faus_role"
+- name: "Install faust gameserver dependencies"
+  apt:
+    name:
+      - devscripts
+      - dpkg-dev
+      - equivars
+      - nginx
+      - python3
+      - python-is-python3
+      - uwsgi
+      - uwsgi-plugin-python3
+  state: latest
+  update_cache: yes
+  become: yes
 
-    - name: Upload uwsgi configuration
-      template:
-        src: "files/ctf-gameserver.ini"
-        dest: "/etc/uwsgi/apps-enabled/"
-      notify: Restart Uwsgi
+- name: Clone faust-gamserver repository
+  git:
+    repo: https://github.com/fausecteam/ctf-gameserver.git
+    dest: /tmp/ctf-gameserver
 
-    - name: Upload nginx configuration
-      template:
-        src: "files/ctf-gameserver.conf"
-        dest: "/etc/nginx/sites-enabled/ctf-gameserver.conf"
+- name: Make dependencies
+  shell:
+    cmd: "mk-build-deps --install debian/control --tool 'apt-get -o Debug::pkgProblemResolver=yes --no-install-recommends -y'"
+    chdir: "/tmp/ctf-gameserver"
 
-    - name: Delete default conf nginx
-      file:
-        path: /etc/nginx/sites-enabled/default
-        state: absent
-      notify: Restart Nginx
+- name: "Create package"
+  shell:
+   cmd: "dpkg-buildpackage --unsigned-changes --unsigned-buildinfo"
+   chdir: "/tmp/ctf-gameserver"
+
+- name: "Remove build dependencies"
+  apt:
+    name:
+      - devscripts
+      - dpkg-dev
+      - equivs
+  state: absent
+  autoremove: yes
+  purge: true
+  
+- name: Install Fauscteam Gameserver
+  include_role:
+    name: "{{ faus_role }}"
+  loop:
+    - fausecteam.ctf_gameserver_ansible.db_prolog
+    - fausecteam.ctf_gameserver_ansible.web
+    - fausecteam.ctf_gameserver_ansible.db_epilog
+    - fausecteam.ctf_gameserver_ansible.controller
+    - fausecteam.ctf_gameserver_ansible.submission
+    - fausecteam.ctf_gameserver_ansible.vpnstatus
+  loop_control:
+    loop_var: "faus_role"
+
+- name: Upload uwsgi configuration
+  template:
+    src: "files/ctf-gameserver.ini"
+    dest: "/etc/uwsgi/apps-enabled/"
+  notify: Restart Uwsgi
+
+- name: Upload nginx configuration
+  template:
+    src: "files/ctf-gameserver.conf"
+    dest: "/etc/nginx/sites-enabled/ctf-gameserver.conf"
+
+- name: Delete default conf nginx
+  file:
+    path: /etc/nginx/sites-enabled/default
+    state: absent
+  notify: Restart Nginx
 
   handlers:
     - name: Restart Nginx
