Fiexd syntax error and indentation

--- a/ansible/roles/gameserver/tasks/main.yml
+++ b/ansible/roles/gameserver/tasks/main.yml
@@ -54,9 +54,10 @@
 
 - name: "Remove build files"
   file:
-    - "/tmp/ctf-gameserver"
-    - "/tmp/ctf-gameserver_1.0_all.deb"
-  state: absent
+    name:
+      - "/tmp/ctf-gameserver"
+      - "/tmp/ctf-gameserver_1.0_all.deb"
+    state: absent
 
 - name: Delete default conf nginx
   file:
