Fixed dependency name

--- a/ansible/roles/gameserver/tasks/main.yml
+++ b/ansible/roles/gameserver/tasks/main.yml
@@ -3,7 +3,7 @@
     name:
       - devscripts
       - dpkg-dev
-      - equivars
+      - equivs
       - nginx
       - uwsgi
       - uwsgi-plugin-python3
