Fixed the name of cluster's members

--- a/ansible/roles/incus/tasks/main.yml
+++ b/ansible/roles/incus/tasks/main.yml
@@ -49,7 +49,7 @@
     when: inventory_hostname == server_1
 
   - name: "Generate node token"
-    shell: "incus cluster --force-local --quiet add {{ inventory_hostname }}"
+    shell: "incus cluster --force-local --quiet add {{ server_name }}"
     register: token
     delegate_to: "{{ server_1 }}"
     when: inventory_hostname != server_1
