Added cluster_address variable

--- a/ansible/roles/terraform/tasks/main.yml
+++ b/ansible/roles/terraform/tasks/main.yml
@@ -5,6 +5,7 @@
     state: present
     complex_vars: true
     variables:
+      cluster_address: "{{ cluster_address }}"
       instances_type: "{{ instances_type }}"
       networks: "{{ networks }}"
       project_name: "{{ project_name }}"
